Fix notification close button Add media component Fix dropdown menu when in hero Fix carat padding Fix modal z-index for use with navbar--fixed Set default text color for pagination Add text--italic helper Add card--horizontal styling

--- a/assets/styles/common/helpers.scss
+++ b/assets/styles/common/helpers.scss
@@ -144,6 +144,10 @@ $alignments: ('centered': 'center', 'justified': 'justify', 'left': 'left', 'rig
   font-weight: $weight-bold !important;
 }
 
+.text--italic {
+  font-style: italic !important;
+}
+
 
 /* Hidden
    ========================================================================== */
