--- a/assets/styles/components/modal.scss
+++ b/assets/styles/components/modal.scss
@@ -2,7 +2,7 @@
    #MODAL
    ========================================================================== */
 
-$modal-z: 20 !default;
+$modal-z: 40 !default;
 
 $modal-background-background-color: rgba($black, 0.86) !default;
 
