--- a/assets/styles/components/pagination.scss
+++ b/assets/styles/components/pagination.scss
@@ -121,6 +121,7 @@ $pagination-shadow-inset: inset 0 1px 2px rgba($black, 0.2) !default;
 .pagination__previous,
 .pagination__next,
 .pagination__link {
+  color: $pagination-color;
   border-color: $pagination-border-color;
   min-width: 2.25em;
 
