--- a/assets/styles/elements/notification.scss
+++ b/assets/styles/elements/notification.scss
@@ -26,10 +26,10 @@ $notification-padding: 1.25rem 2.5rem 1.25rem 1.5rem !default;
   /* Notification Delete
      ========================================================================== */
 
-  > .delete {
+  > .close {
     position: absolute;
-    right: 0.5em;
-    top: 0.5em;
+    right: 0.5rem;
+    top: 0.5rem;
   }
 
 
